force-app/main/default/objects/AdaptiveAsyncChunk__e/AdaptiveAsyncChunk__e.object-meta.xml
<CustomObject>
    <label>Adaptive Async Chunk</label>
    <pluralLabel>Adaptive Async Chunks</pluralLabel>
</CustomObject>