force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Actual_Processed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Processed__c</fullName>
    <label>Actual Processed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>