force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Callout_Orders__c.field-meta.xml
<CustomField>
    <fullName>Callout_Orders__c</fullName>
    <label>Callout Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>