force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Planned_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Planned_Chunk_Size__c</fullName>
    <label>Planned Chunk Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>