force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Predicted_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Callouts__c</fullName>
    <label>Predicted Callouts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>