force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Run_Complete__c.field-meta.xml
<CustomField>
    <fullName>Run_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True on the last chunk event for this run.</description>
    <label>Run Complete</label>
    <type>Checkbox</type>
</CustomField>