force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <label>Run Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>