force-app/main/default/objects/AdaptiveAsyncChunk__e/fields/Zero_Callout_Orders__c.field-meta.xml
<CustomField>
    <fullName>Zero_Callout_Orders__c</fullName>
    <label>Zero Callout Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>